# openrobot-MTI

./: .gitignore  2  ACC.txt  MTComm Example.cpp  MTComm.cpp  MTComm.h  MTI.cpp  MTI.pc  MTI.pc.in  Makefile  Makefile.in  autogen.sh  compile  config.status  configure  configure.ac  configure.ac~  libtool  log2.txt  makefile  mkinstalldirs
MTI/: MTComm.h  MTI.h  Makefile.in  cmtmessage.h  periodicTimestampEstimator.h  structMTI.h  xsens_file.h  xsens_list.h
oldsrc/: MTI.cpp~
src/: MTComm.cpp  MTComm.h  MTI.cpp  MTI.h  Makefile.in  cmt3.cpp  cmtscan.cpp  structMTI.h
test/: DEPENDANCES  MTITest  Makefile  Makefile.in  log.txt  test.cpp  test.cpp~  test.lo
